# AlekSIS-App-LDAP

./: CHANGELOG.rst  MANIFEST.in  README.rst  models.py  preferences.py  pyproject.toml
aleksis/apps/ldap/: __init__.py  apps.py  menus.py  model_extensions.py  models.py  preferences.py  settings.py  tasks.py  urls.py  views.py
aleksis/apps/ldap/locale/ar/LC_MESSAGES/: django.po
aleksis/apps/ldap/locale/de_DE/LC_MESSAGES/: django.po
aleksis/apps/ldap/locale/fr/LC_MESSAGES/: django.po
aleksis/apps/ldap/locale/la/LC_MESSAGES/: django.po
aleksis/apps/ldap/locale/nb_NO/LC_MESSAGES/: django.po
aleksis/apps/ldap/locale/tr_TR/LC_MESSAGES/: django.po
aleksis/apps/ldap/management/commands/: mass_ldap_import.py
aleksis/apps/ldap/migrations/: 0001_initial.py
aleksis/apps/ldap/templates/ldap/: empty.html
aleksis/apps/ldap/util/: ldap.py  ldap_password.py  ldap_sync.py
aleksis/apps/posix/: preferences.py
